Make Java 11 compatible