@@ -10,6 +10,7 @@ import lombok.NoArgsConstructor;
 import lombok.Setter;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Getter
 @Setter
@@ -39,7 +40,7 @@ public class UserDTO {
     public UserDTO(User user) {
         this.country = user.getCountry();
         this.email = user.getEmail();
-        this.groups = user.getGroups().stream().map(UserGroup::getName).toList();
+        this.groups = user.getGroups().stream().map(UserGroup::getName).collect(Collectors.toList());
         this.username = user.getUsername();
         this.firstName = user.getFirstName();
         this.lastName = user.getLastName();
@@ -53,7 +54,7 @@ public class UserDTO {
 
         user.setCountry(this.getCountry());
         user.setEmail(this.getEmail());
-        user.setGroups(getGroups().stream().map(UserGroup::new).toList());
+        user.setGroups(getGroups().stream().map(UserGroup::new).collect(Collectors.toList()));
         user.setUsername(this.getUsername());
         user.setFirstName(this.getFirstName());
         user.setLastName(this.getLastName());
