@@ -9,6 +9,7 @@ import org.springframework.stereotype.Service;
 
 import javax.transaction.Transactional;
 import java.util.List;
+import java.util.stream.Collectors;
 
 import static com.example.workbench_demo.service.Utils.*;
 
@@ -30,9 +31,9 @@ public class DomainService {
     public void addDomains(List<String> domainNames, String engagementId) {
         Engagement engagement = getEngagementById(engagementId, engagementRepository);
         List<Long> currentDomainIds = engagement.getDomains().stream()
-                .map(Domain::getId).toList();
+                .map(Domain::getId).collect(Collectors.toList());
         List<String> regexes = domainNames.stream()
-                .map(name -> String.format(EMAIL_DOMAIN_REGEX, name)).toList();
+                .map(name -> String.format(EMAIL_DOMAIN_REGEX, name)).collect(Collectors.toList());
 
         domainRepository.deleteAllById(currentDomainIds);
         domainNames.forEach(domainName ->
@@ -46,6 +47,6 @@ public class DomainService {
 
     public List<String> getDomains(String engagementId) {
         Engagement engagement = getEngagementById(engagementId, engagementRepository);
-        return engagement.getDomains().stream().map(Domain::getName).toList();
+        return engagement.getDomains().stream().map(Domain::getName).collect(Collectors.toList());
     }
 }
