@@ -8,6 +8,7 @@ import org.springframework.stereotype.Service;
 
 import javax.transaction.Transactional;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @Transactional
@@ -34,6 +35,6 @@ public class UserService {
         return userRepository.findByCredential(credential, credential,
                 credential, credential, isExternal).stream()
                 .map(UserDTO::new)
-                .toList();
+                .collect(Collectors.toList());
     }
 }
